@@ -38,6 +38,9 @@ Bernhard Walle and Joerg Spieler for contributing to this release.
 - bufferSet api rewritten. Now all editPane own their bufferSet, do not share
   it with another editPane and it can never be changed.
   The scope is the same for all EditPanes (Matthieu Casanova)
+  
+- Status bar widget : it is now possible to use labels starting with letters
+  in status bar (Matthieu Casanova)
 
 }}}
 {{{ Editing
